test_data/Json/Unexpected/Unserializable/InvalidModelType/Range/wrong.json.exception
Expected the model type 'Range', but got soReallyUtterlyInvalid at: modelType